--- a/main.tex
+++ b/main.tex
@@ -624,6 +624,8 @@
 	\begin{enumerate}
 		\item \{0,1\}上的含有子串 010 的所有串；
 		
+		\textbf{答：}
+		
 		构造正规式：(0|1)*010(0|1)*
 		
 		\begin{figure}[H]
@@ -651,6 +653,8 @@
 		\end{figure}
 		
 		\item \{0,1\}上不含字串 010 的所有串。
+		
+		\textbf{答：}
 		
 		构造正规式：1*(0*11+)*0*(01)?
 		
@@ -837,6 +841,8 @@
     
     
     \item[3.14] 构造一个DFA，它接收$\Sigma=\{0,1\}$上所有满足如下条件的字符串：每个1都有0直接跟在右边。
+	
+	\textbf{答：}
 	
 	构造正规式 0*(10+)*，转换成 DFA：
 	
