--- a/main.tex
+++ b/main.tex
@@ -644,8 +644,7 @@
 		            edge node {1} (2)
 		        (2) edge node {0} (3)
 		            edge [bend left] node {1} (0)
-		        (3) edge [bend left] node {0} (1)
-		            edge [bend right] node [above] {1} (2)
+		        (3) edge [loop above] node {0, 1} (3)
 		        ;
 		    \end{tikzpicture}
 		    \caption{(0|1)*010(0|1)* 对应的 DFA}
