--- a/main.tex
+++ b/main.tex
@@ -536,6 +536,9 @@
                 \node[state] (7) [below of = 5] {7};
                 \node[state] (8) [above right of = 5] {8};
                 \node[state] (9) [below right of = 5] {9};
+                \node[state] (10) [below right of = 8] {10};
+                \node[state] (11) [above of = 8] {11};
+                \node[state] (12) [below of = 9] {12};
                 
                 
                 \path
@@ -554,7 +557,15 @@
                 (6) edge node {0} (5)
                 (7) edge node {1} (5)
                 (8) edge node {1} (0)
+                    edge node {1} (10)
                 (9) edge node {0} (0)
+                    edge node {0} (10)
+                (10) edge node {0} (11)
+                    edge node {1} (12)
+                (11) edge node {0} (10)
+                    edge [bend right] node {0} (0)
+                (12) edge node {1} (10)
+                    edge [bend left] node {1} (0)
                 ;
             \end{tikzpicture}
             \caption{正规式 (00|11)*((01|10)(00|11)*(01|10)(00|11)*)* 的化简 NFA}
@@ -577,14 +588,48 @@
                 \hline
                 3 & \{5\} & \{6, 8\} & \{7, 9\} \\
                 \hline
-                4 & \{6, 8\} & \{5\} & \{0\} \\
+                4 & \{6, 8\} & \{5\} & \{0, 10\} \\
                 \hline
-                5 & \{7, 9\} & \{0\} & \{5\} \\
+                5 & \{7, 9\} & \{0, 10\} & \{5\} \\
+                \hline
+                6 & \{0, 10\} & \{1, 3, 11\} & \{2, 4, 12\} \\
+                \hline
+                7 & \{1, 3, 11\} & \{0\} & \{5\} \\
+                \hline
+                8 & \{2, 4, 12\} & \{5\} & \{0\} \\
                 \hline
             \end{tabular}
             \caption{状态转移表}
             \label{tab:4}
         \end{table}
+        
+        暗中观察发现表 \ref{tab:4} 中 n 的值属于 {1, 7} 的 $I_0, I_1$ 对应相同，{2, 8} 也具有同样的性质，这表明 {1, 7}, {2, 8} 可以分别合并为 1, 2。
+        
+        \begin{table}[H]
+            \centering
+            \begin{tabular}{|c|c|c|c|}
+                \hline
+                n & $I$ & $I_0$ & $I_1$ \\
+                \hline
+                0 & \{0\} & 1 & 2 \\
+                \hline
+                1 & \{1, 3\} & 0 & 3 \\
+                \hline
+                2 & \{2, 4\} & 3 & 0 \\
+                \hline
+                3 & \{5\} & 4 & 5 \\
+                \hline
+                4 & \{6, 8\} & 3 & 6 \\
+                \hline
+                5 & \{7, 9\} & 6 & 3 \\
+                \hline
+                6 & \{0, 10\} & 1 & 2 \\
+                \hline
+            \end{tabular}
+            \caption{简化的状态转移表}
+            \label{tab:4_1}
+        \end{table}
+
         
         重新标号得到 DFA：
         \begin{figure}[H]
@@ -593,23 +638,25 @@
                 \node[state, initial, accepting] (0) {0};
                 \node[state] (1) [below left of = 0] {1};
                 \node[state] (2) [below right of = 0] {2};
-                \node[state] (3) [below left of = 1] {3};
-                \node[state] (4) [below right of = 1] {4};
+                \node[state] (3) [below right of = 1] {3};
+                \node[state] (4) [below left of = 1] {4};
                 \node[state] (5) [below right of = 2] {5};
-                
+                \node[state] (6) [below of = 3] {6};
                 \path
                 (0) edge node {0} (1)
                     edge node {1} (2)
-                (1) edge node {1} (4)
+                (1) edge node {1} (3)
                     edge node {0} (0)
-                (2) edge node [above left] {0} (4)
+                (2) edge node [above left] {0} (3)
                     edge node {1} (0)
-                (3) edge [bend left] node {0} (0)
-                    edge node {0} (4)
+                (3) edge node {0} (4)
+                    edge node {0} (5)
                 (4) edge node {0} (3)
-                    edge node {1} (5)
-                (5) edge [bend right] node [above right] {1} (0)
-                    edge node {1} (4)
+                    edge node {1} (6)
+                (5) edge node [above left] {0} (6)
+                    edge node {1} (3)
+                (6) edge node {0} (1)
+                    edge node [below right] {1} (2)
                 ;
                 
             \end{tikzpicture}
