--- a/main.tex
+++ b/main.tex
@@ -758,7 +758,7 @@
             \centering
             \begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=1.8cm,semithick]
                 \node[state, initial, accepting] (0) {0};
-                \node[state] (1) [below of = 0] {1};
+                \node[state, accepting] (1) [below of = 0] {1};
                 \node[state] (2) [right of = 0] {2};
                 \node[state] (3) [right of = 2] {3};
                 \node[state] (4) [right of = 1] {4};
@@ -813,7 +813,7 @@
             \centering
             \begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=1.8cm,semithick]
                 \node[state, initial, accepting] (0) {0};
-                \node[state] (1) [below of = 0] {1};
+                \node[state, accepting] (1) [below of = 0] {1};
                 \node[state] (2) [right of = 0] {2};
                 \node[state] (3) [right of = 2] {3};
                 \node[state] (4) [right of = 1] {4};
@@ -847,8 +847,7 @@
     \begin{itemize}
         \item 图 \ref{fig:3_ans_1_a} 中 \{0, 1\} 不能被任何串区分，并且 \{0, 1\}, \{2\} 可以被区分。
         
-        \item 图 \ref{fig:3_ans_1_b} 中 \{1, 5\} 不能被任何串区分，并且 \{0\}, \{1, 5\}, \{2\}, \{3\}, \{4\} 可以被区分。
-
+        \item 图 \ref{fig:3_ans_1_b} 中 \{0, 1\}, \{2, 4\}, \{3, 5\} 可以分别合并。
     \end{itemize}
     
     所以得到最小化 DFA：
@@ -872,20 +871,14 @@
             \centering
             \begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=1.8cm,semithick]
                 \node[state, initial, accepting] (0) {0};
-                \node[state] (1) [below of = 0] {1};
-                \node[state] (2) [right of = 0] {2};
-                \node[state] (3) [right of = 2] {3};
-                \node[state] (4) [right of = 1] {4};
+                \node[state] (1) [right of = 0] {1};
+                \node[state] (2) [right of = 1] {2};
                 \path
-                (0) edge node {a} (1)
+                (0) edge [loop above] node {a} (0)
+                    edge [bend left] node {b} (1)
+                (1) edge [bend left] node {a} (0)
                     edge node {b} (2)
-                (1) edge [loop left] node {a} (1)
-                    edge node [below] {b}(4)
-                (2) edge [bend left] node [above left] {a} (1)
-                    edge node {b} (3)
-                (3) edge [loop right] node {a} (3)
-                    edge node {b} (2)
-                (4) edge [bend right] node {a} (0)
+                (2) edge [loop above] node {a} (2)
                     edge node {b} (1)
                 ;
             \end{tikzpicture}
