--- a/main.tex
+++ b/main.tex
@@ -209,7 +209,7 @@
                 (1) edge [loop above] node {0} (1)
                     edge node {1} (2)
                 (2) edge node {0} (3)
-                    edge [bend right] node [above] {1} (1)
+                    edge [loop above] node {1} (2)
                 (3) edge node {1} (4)
                     edge [bend left] node {0} (1)
                 (4) edge [bend right] node [above] {0} (3)
@@ -789,7 +789,7 @@
     
     确定化：
     
-    图 \ref{fig:3_1} 并不是 DFA 所以要做确定化，而图 \ref{fig:3_2} 所示是 DFA 无须确定化。
+    图 \ref{fig:3_1} 并不是 DFA 所以要做确定化，而图 \ref{fig:3_2} 所示是 DFA 不需要确定化。
     
     \begin{figure}[H]
         \begin{subfigure}{0.45\textwidth}
