homework #2 (problems only)

--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,8 @@
 \usepackage{color}
 \usepackage{subcaption}
 \usepackage{float}
+\usepackage{amsmath}
+\usepackage[normalem]{ulem}
 
 \usepackage{geometry}
 \geometry{
@@ -28,6 +30,6 @@
 
 \maketitle
 
-\subfile{1.tex}
+\subfile{2.tex}
 
 \end{document}
